--- a/styles/partials/menu2.css
+++ b/styles/partials/menu2.css
@@ -1,11 +1,6 @@
 @charset "UTF-8";
 /*menu2*/
 /*englobe menu2*/
-#container-m-2 {
-  width: 100%;
-  height: auto;
-}
-
 #carte-m2 {
   font-family: 'Parisienne', cursive;
   background-color: #fdf5fe;
@@ -77,8 +72,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: -webkit-gradient(linear, left top, right top, from(#c77800), color-stop(#c77800), color-stop(#ba68c8), color-stop(#3f51b5), to(#3f51b5));
-  background: linear-gradient(to right, #c77800, #c77800, #ba68c8, #3f51b5, #3f51b5);
+  background: -webkit-gradient(linear, left top, right bottom, from(#c77800), color-stop(#c77800), color-stop(#ba68c8), color-stop(#ba68c8), to(#3f51b5));
+  background: linear-gradient(to right bottom, #c77800, #c77800, #ba68c8, #ba68c8, #3f51b5);
   mix-blend-mode: screen;
 }
 
@@ -221,7 +216,7 @@
 /*desserts menu2*/
 /*listes des plats menu2*/
 /*menu2 responsive*/
-@media (max-width: 870px) {
+@media (max-width: 980px) {
   #container-m-2 {
     width: 100%;
     height: auto;
@@ -229,7 +224,7 @@
     padding: 0;
   }
   #carte-m2 {
-    width: 100%;
+    width: 90%;
     height: auto;
     padding-bottom: 30px;
     margin-bottom: 30px;
