--- a/styles/partials/maquette.css
+++ b/styles/partials/maquette.css
@@ -33,22 +33,24 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  width: 80%;
+  width: 70%;
   margin: auto;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .menu {
   margin: 30px auto 30px auto;
   border: solid 2px #e0e0e0;
   width: 40%;
-  height: 750px;
+  height: auto;
   overflow: hidden;
 }
 
@@ -63,7 +65,7 @@
   transform: scale(1.15);
   -webkit-transition: all 0.9s;
   transition: all 0.9s;
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
 .menu img {
@@ -223,10 +225,24 @@ span {
 
 /*mentions + mail animés*/
 /*responsive index*/
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 1350px) {
+  #box1 {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #box1 {
+    width: 90%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
   .menu {
     width: auto;
     height: 500px;
+    margin: 30px auto;
   }
   .bientot {
     width: 60%;
