--- a/styles/partials/menu3.css
+++ b/styles/partials/menu3.css
@@ -1,9 +1,5 @@
 @charset "UTF-8";
 /*menu3*/
-#container-m-3 {
-  height: auto;
-}
-
 #carte-m3 {
   font-family: 'Kalam', cursive;
   width: 90%;
@@ -72,8 +68,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: -webkit-gradient(linear, left top, right top, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
-  background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
+  background: -webkit-gradient(linear, left top, right bottom, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
+  background: linear-gradient(to right bottom, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
   mix-blend-mode: screen;
 }
 
@@ -198,16 +194,9 @@
 
 /*separateurs menu3*/
 /*responsive menu3*/
-@media screen and (max-width: 1500px) {
-  .m-1 {
-    font-size: 1.8em;
-  }
-}
-
-@media screen and (max-width: 870px) {
+@media screen and (max-width: 980px) {
   #carte-m3 {
-    width: 100%;
-    padding-bottom: 30px;
+    width: 90%;
     height: auto;
     margin-bottom: 30px;
   }
