--- a/styles/partials/menu4.scss
+++ b/styles/partials/menu4.scss
@@ -1,8 +1,4 @@
 /*menu4*/
-#container-m4 {
-  height: auto;
-}
-
 #carte-m4 {
   font-family: 'Dancing Script', cursive;
   width: 90%;
@@ -28,8 +24,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: -webkit-gradient(linear, left top, right bottom, from(#003300), color-stop(#66bb6a), color-stop(#66bb6a), color-stop(#81c784), to(#98ee99));
-  background: linear-gradient(to right, #003300, #81c784, #98ee99, #98ee99);
+  background: -webkit-gradient(linear, left top, right, from(#003300), color-stop(#66bb6a), color-stop(#66bb6a), color-stop(#81c784), to(#98ee99));
+  background: linear-gradient(to right bottom, #003300, #81c784, #98ee99, #98ee99);
   mix-blend-mode: screen;
 }
 
@@ -49,7 +45,7 @@
 
 .traitm4:hover:after {
   width: 100%;
-  background: -webkit-gradient(linear, left top, right top, from(#2e7d32), color-stop(#66bb6a), color-stop(#66bb6a), color-stop(#81c784), to(#76d275));
+  background: -webkit-gradient(linear, left, right, from(#2e7d32), color-stop(#66bb6a), color-stop(#66bb6a), color-stop(#81c784), to(#76d275));
   background: linear-gradient(to right, #2e7d32, #81c784, #98ee99, #98ee99);
 }
 
@@ -92,10 +88,7 @@
 /*commun menu4*/
 
 /*responsive menu4*/
-@media screen and (max-width:870px) {
-  #container-m4 {
-    height: auto;
-  }
+@media screen and (max-width:980px) {
 
   .gradient-m4 {
     font-size: 3em;
@@ -110,7 +103,7 @@
   }
 
   #carte-m4 {
-    width: 100%;
+    width: 90%;
     height: auto;
     padding-bottom: 30px;
     margin-bottom: 30px;
