--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -2,36 +2,37 @@
 
 /*barre de recherche index*/
 .recherche .iconloupe {
-  background:url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
-  }
-    
-  .recherche input {
-  outline:0;
-  border:0;
-  margin:0;
-  height:24px;
-  float:left;
-  display:block;
-  padding-left:30px;
-  }
-
-  .recherche {
- background-color: white;
- height: 30px;
- border: solid 1px grey;
+  background: url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
 }
 
-  .iconloupe{
- float:left;
+.recherche input {
+  outline: 0;
+  border: 0;
+  margin: 0;
+  height: 24px;
+  float: left;
+  display: block;
+  padding-left: 30px;
 }
+
+.recherche {
+  background-color: white;
+  height: 30px;
+  border: solid 1px grey;
+}
+
+.iconloupe {
+  float: left;
+}
+
 /*barre de recherche index*/
 
 /*box + zoom sur image*/
-#box1{
+#box1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  flex-direction:row;
+  flex-direction: row;
   width: 70%;
   margin: auto;
   justify-content: space-around;
@@ -44,38 +45,44 @@
   width: 40%;
   height: auto;
   overflow: hidden;
-  }
+}
 
-  .menu img:hover{
-    width: 100%;
-    /* L'image est grossie de 15% */
-    -webkit-transform:scale(1.15); /* Safari et Chrome */
-    -moz-transform:scale(1.15); /* Firefox */
-    -ms-transform:scale(1.15); /* Internet Explorer 9 */
-    -o-transform:scale(1.15); /* Opera */
-    transform:scale(1.15);
-    -moz-transition: all 0.9s;
-    -webkit-transition: all 0.9s;
-    transition: all 0.9s;
-    opacity: 0.6;
-  }
+.menu img:hover {
+  width: 100%;
+  /* L'image est grossie de 15% */
+  -webkit-transform: scale(1.15);
+  /* Safari et Chrome */
+  -moz-transform: scale(1.15);
+  /* Firefox */
+  -ms-transform: scale(1.15);
+  /* Internet Explorer 9 */
+  -o-transform: scale(1.15);
+  /* Opera */
+  transform: scale(1.15);
+  -moz-transition: all 0.9s;
+  -webkit-transition: all 0.9s;
+  transition: all 0.9s;
+  opacity: 0.6;
+}
 
-  .menu img {
-  width:100%;
-  height:100%;
-  }
-  .menu img:hover {
-  width:100%;
-  }
+.menu img {
+  width: 100%;
+  height: 100%;
+}
+
+.menu img:hover {
+  width: 100%;
+}
+
 /*box + zoom sur image*/
 
 /*prochainement + animation points*/
-.bientot{
+.bientot {
   font-size: 2.1em;
   text-align: center;
   display: flex;
   justify-content: center;
-  color:#ffd54f;
+  color: #ffd54f;
   border: 2px dotted #00796b;
   background-color: #00796b;
   border-radius: 20px;
@@ -84,72 +91,119 @@
   height: auto;
 }
 
-@keyframes dots{
-  0%{margin-top:0;}
-  50%{margin-top:-5px;}
-  100%{margin-top:0}
+@keyframes dots {
+  0% {
+    margin-top: 0;
+  }
+
+  50% {
+    margin-top: -5px;
+  }
+
+  100% {
+    margin-top: 0
+  }
 }
 
-.bientot span:first-child{
-  animation:dots 1.5s infinite;
+.bientot span:first-child {
+  animation: dots 1.5s infinite;
 }
 
-.bientot span:nth-child(2){
-  animation:dots 1.5s infinite;
+.bientot span:nth-child(2) {
+  animation: dots 1.5s infinite;
   animation-delay: 0.5s;
 }
 
-.bientot span:last-child{
-  animation:dots 1.5s infinite;
+.bientot span:last-child {
+  animation: dots 1.5s infinite;
   animation-delay: 1s;
 }
 
-span{
+span {
   margin-top: -5px;
 }
+
 /*prochainement + animation points*/
 
 /*mentions + mail animés*/
-@keyframes thing{
-  0%{ margin:0}
-  15% {margin-top:-2px;}
-  33%{ margin-left:-5px;}
-  45%{margin-top: 2px; }
-  66%{ margin-left:5px;}
-  100%{ margin:0;}
+@keyframes thing {
+  0% {
+    margin: 0
+  }
 
-  0%{ margin:0}
-  15% {margin-top:-2px;}
-  33%{ margin-right:-5px;}
-  45%{margin-top: 2px; }
-  66%{ margin-right:5px;}
-  100%{ margin:0;}
+  15% {
+    margin-top: -2px;
+  }
+
+  33% {
+    margin-left: -5px;
+  }
+
+  45% {
+    margin-top: 2px;
+  }
+
+  66% {
+    margin-left: 5px;
+  }
+
+  100% {
+    margin: 0;
+  }
+
+  0% {
+    margin: 0
+  }
+
+  15% {
+    margin-top: -2px;
+  }
+
+  33% {
+    margin-right: -5px;
+  }
+
+  45% {
+    margin-top: 2px;
+  }
+
+  66% {
+    margin-right: 5px;
+  }
+
+  100% {
+    margin: 0;
+  }
 }
+
 /*mentions + mail animés*/
 
 
 /*responsive index*/
-@media screen and (max-width: 1350px){
-  #box1{
+@media screen and (max-width: 1350px) {
+  #box1 {
     width: 80%;
   }
 }
-@media screen and (max-width: 700px){
-  #box1{
+
+@media screen and (max-width: 700px) {
+  #box1 {
     width: 90%;
     flex-direction: column;
   }
-  .menu{
+
+  .menu {
     width: auto;
     height: 500px;
     margin: 30px auto;
   }
 
-  .bientot{
+  .bientot {
     width: 60%;
     font-size: 1.5em;
     margin: 10px auto;
   }
 }
+
 /*responsive index*/
 /*index*/
