--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -1,12 +1,28 @@
 /*layout*/
 body {
   width: 100%;
-  max-width: 2100px;
+  max-width: 4000px;
   height: auto;
   margin: 0;
 }
 
 /*header*/
+#conteneur, #carte-m3, #contteneurmention {
+  max-width: 2700px;
+  max-width: 2700px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .header {
   text-align: center;
   width: 100%;
@@ -17,14 +33,14 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.header>h1:nth-child(1) {
+.header > h1:nth-child(1) {
   font-family: sans-serif;
 }
 
@@ -42,8 +58,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   color: black;
   font-weight: bold;
   font-size: 2em;
@@ -61,7 +77,7 @@ body {
   font-weight: lighter;
   font-size: 2.5em;
   -ms-flex-item-align: baseline;
-  align-self: baseline;
+      align-self: baseline;
   margin: auto;
 }
 
@@ -77,8 +93,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .listes {
@@ -88,11 +104,11 @@ body {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .prix {
@@ -100,8 +116,8 @@ body {
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 /*listes menus + prix*/
@@ -116,14 +132,14 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   bottom: 0;
   position: -webkit-sticky;
   position: sticky;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 footer {
@@ -141,16 +157,16 @@ footer {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: end;
+      -ms-flex-pack: end;
+          justify-content: end;
 }
 
 .mail:hover {
   color: #ffd54f;
   -webkit-animation: thing 0.1s;
-  animation: thing 0.1s;
+          animation: thing 0.1s;
   -webkit-animation-iteration-count: 5;
-  animation-iteration-count: 5;
+          animation-iteration-count: 5;
 }
 
 .mail {
@@ -168,9 +184,9 @@ footer {
 .mention:hover {
   color: #ffd54f;
   -webkit-animation: thing 0.1s;
-  animation: thing 0.1s;
+          animation: thing 0.1s;
   -webkit-animation-iteration-count: 5;
-  animation-iteration-count: 5;
+          animation-iteration-count: 5;
   text-align: left;
 }
 
@@ -182,12 +198,10 @@ footer {
     padding: 0;
     height: auto;
   }
-
   .titre {
     font-size: 1em;
     margin: 0;
   }
-
   .ul-m4 {
     height: auto;
     margin-top: 0;
@@ -198,32 +212,29 @@ footer {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
-
   .m-1 {
     margin: auto;
     font-size: 1.5em;
   }
-
   .listes {
     text-align: center;
     list-style: none;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin: auto;
     padding-bottom: 10px;
   }
-
   .prix {
     margin: 0;
     padding: 8px 0;
@@ -231,8 +242,8 @@ footer {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
