--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -7,7 +7,9 @@ body {
 }
 
 /*header*/
-#conteneur, #carte-m3, #contteneurmention {
+#conteneur,
+#carte-m3,
+#contteneurmention {
   max-width: 2700px;
   max-width: 2700px;
   display: flex;
