--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -7,20 +7,22 @@ body {
 }
 
 /*header*/
-#conteneur, #carte-m3, #contteneurmention {
+#conteneur,
+#carte-m3,
+#contteneurmention {
   max-width: 2700px;
   max-width: 2700px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin: auto;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .header {
@@ -33,14 +35,14 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
-.header > h1:nth-child(1) {
+.header>h1:nth-child(1) {
   font-family: sans-serif;
 }
 
@@ -58,8 +60,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   color: black;
   font-weight: bold;
   font-size: 2em;
@@ -77,7 +79,7 @@ body {
   font-weight: lighter;
   font-size: 2.5em;
   -ms-flex-item-align: baseline;
-      align-self: baseline;
+  align-self: baseline;
   margin: auto;
 }
 
@@ -93,8 +95,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .listes {
@@ -104,11 +106,11 @@ body {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .prix {
@@ -116,8 +118,8 @@ body {
   display: -ms-inline-flexbox;
   display: inline-flex;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
 }
 
 /*listes menus + prix*/
@@ -132,14 +134,14 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   bottom: 0;
   position: -webkit-sticky;
   position: sticky;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 footer {
@@ -157,16 +159,16 @@ footer {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
+  -ms-flex-pack: end;
+  justify-content: end;
 }
 
 .mail:hover {
   color: #ffd54f;
   -webkit-animation: thing 0.1s;
-          animation: thing 0.1s;
+  animation: thing 0.1s;
   -webkit-animation-iteration-count: 5;
-          animation-iteration-count: 5;
+  animation-iteration-count: 5;
 }
 
 .mail {
@@ -184,9 +186,9 @@ footer {
 .mention:hover {
   color: #ffd54f;
   -webkit-animation: thing 0.1s;
-          animation: thing 0.1s;
+  animation: thing 0.1s;
   -webkit-animation-iteration-count: 5;
-          animation-iteration-count: 5;
+  animation-iteration-count: 5;
   text-align: left;
 }
 
@@ -198,10 +200,12 @@ footer {
     padding: 0;
     height: auto;
   }
+
   .titre {
     font-size: 1em;
     margin: 0;
   }
+
   .ul-m4 {
     height: auto;
     margin-top: 0;
@@ -212,29 +216,32 @@ footer {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
+
   .m-1 {
     margin: auto;
     font-size: 1.5em;
   }
+
   .listes {
     text-align: center;
     list-style: none;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     margin: auto;
     padding-bottom: 10px;
   }
+
   .prix {
     margin: 0;
     padding: 8px 0;
@@ -242,8 +249,8 @@ footer {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 
